fixing table clicking on small screans

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -55,7 +55,6 @@ main {
         top: 0;
         left: 0;
         right: 0;
-        bottom: 0;
         display: flex;
         flex-direction: column;
         align-content: center;
